# finance-saas

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 58d724b8178d_initial_schema.py  a1b2c3d4e5f6_perf_add_transaction_indexes.py  b2c3d4e5f6a7_security_add_revoked_tokens.py  bad4610d09f9_seed_system_categories.py  c3e1f2a4b5d6_seed_test_user_data.py  e5f6a7b8c9d0_seed_march_2026_transactions.py  f7a8b9c0d1e2_seed_test_user_budgets.py
app/: config.py  main.py
app/api/: router.py
app/api/v1/: accounts.py  auth.py  budgets.py  (+6 more)
app/core/: database.py  dependencies.py  exceptions.py  limiter.py  security.py
app/models/: __init__.py  account.py  base.py  budget.py  category.py  report.py  revoked_token.py  tenant.py  transaction.py  user.py
app/schemas/: account.py  auth.py  budget.py  category.py  spend_advisory.py  tax_advisory.py  transaction.py  user.py
app/services/: account_service.py  auth_service.py  budget_service.py  category_service.py  report_service.py  spend_advisory_service.py  tax_advisory_service.py  transaction_service.py
docs/: architecture.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
tests/: conftest.py  helpers.py  test_accounts.py  test_auth.py  test_budgets.py  test_categories.py  test_dependencies.py  test_exceptions.py  test_reports.py  test_security.py  test_spend_advisory.py  test_tax_advisory.py  test_transactions.py
(+75 files in other folders)
